--- a/css/main.css
+++ b/css/main.css
@@ -96,7 +96,7 @@
 
 .mobile-social__link {
   color: var(--text-hover-color);
-  font-size: 11px;
+  font-size: 18px;
   line-height: 1.2;
 }
 @media screen and (min-width: 480px) {
@@ -158,6 +158,7 @@
 .partners-title {
     font-size: 36px;
     line-height: 1.16;
+    text-align: center;
   }
 }
 
@@ -170,13 +171,9 @@
   letter-spacing: 0.03em;
   text-transform: uppercase;
   text-align: center;
-}
-@media screen and (min-width: 1200px) {
-  .our-features-title,
-.img-section__label,
-.basement__subtitle {
+  /* @include desktop {
     text-align: left;
-  }
+  } */
 }
 
 @media screen and (min-width: 768px) {
@@ -192,6 +189,11 @@
 @media screen and (min-width: 768px) {
   .basement__subtitle {
     text-align: center;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .basement__subtitle {
+    text-align: left;
   }
 }
 
@@ -326,7 +328,7 @@ img {
 }
 @media screen and (min-width: 480px) {
   .container {
-    width: 448px;
+    width: 480px;
   }
 }
 @media screen and (min-width: 768px) {
@@ -1003,6 +1005,9 @@ img {
     padding-top: 200px;
     padding-bottom: 200px;
     background-image: var(--bg-gradient), url(../images/hero-bg.jpeg);
+    /* background-size: 1600px; */
+    max-width: 1600px;
+    margin: 0 auto;
   }
 }
 @media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
@@ -1125,12 +1130,6 @@ img {
 /* .img-section-picture{} */
 .our-team {
   background-color: var(--background-color-special);
-  padding: 60px 0;
-}
-@media screen and (min-width: 1200px) {
-  .our-team {
-    padding-top: 94px;
-  }
 }
 
 /* .our-team-main-title {} */
@@ -1172,15 +1171,7 @@ img {
   margin-bottom: 10px;
 }
 
-.partners {
-  padding: 60px 0;
-}
-@media screen and (min-width: 1200px) {
-  .partners {
-    padding-top: 94px;
-  }
-}
-
+/* .partners {} */
 .partners__list {
   list-style: none;
   display: flex;
@@ -1199,11 +1190,15 @@ img {
   width: 210px;
   height: 92px;
   fill: var(--social-main-color);
-  flex-basis: calc((100% - 30px) / 2);
 }
 .partners__link:hover, .partners__link:focus {
   fill: var(--text-hover-color);
   border: 1px solid var(--text-hover-color);
+}
+@media screen and (min-width: 480px) {
+  .partners__link {
+    flex-basis: calc((100% - 30px) / 2);
+  }
 }
 @media screen and (min-width: 768px) {
   .partners__link {
@@ -1243,7 +1238,7 @@ img {
   .basement-container {
     flex-direction: row;
     flex-wrap: wrap;
-    gap: none;
+    gap: 0;
   }
 }
 @media screen and (min-width: 1200px) {
