--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -28,6 +28,9 @@
     padding-top: 200px;
     padding-bottom: 200px;
     background-image: var(--bg-gradient), url(../images/hero-bg.jpeg);
+    /* background-size: 1600px; */
+    max-width: 1600px;
+    margin: 0 auto;
 
     @include retina {
       background-image: var(--bg-gradient), url(../images/hero-bg-2x.jpeg);
