--- a/sass/layouts/_partners.scss
+++ b/sass/layouts/_partners.scss
@@ -1,10 +1,4 @@
-.partners {
-  padding: 60px 0;
-
-  @media screen and(min-width: 1200px) {
-    padding-top: 94px;
-  }
-}
+/* .partners {} */
 
 .partners__list {
   list-style: none;
@@ -31,7 +25,9 @@
     border: 1px solid var(--text-hover-color);
   }
 
-  flex-basis: calc((100% - 30px) / 2);
+  @include mobile {
+    flex-basis: calc((100% - 30px) / 2);
+  }
 
   @include tablet {
     flex-basis: calc((100% - 60px) / 3);
