--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -71,7 +71,7 @@
 
 .mobile-social__link {
   color: var(--text-hover-color);
-  font-size: 11px;
+  font-size: 18px;
   line-height: 1.2;
   @include mobile {
     font-size: 18px;
@@ -128,6 +128,7 @@
   @include desktop {
     font-size: 36px;
     line-height: 1.16;
+    text-align: center;
   }
 }
 
@@ -142,9 +143,9 @@
   text-transform: uppercase;
   text-align: center;
 
-  @include desktop {
+  /* @include desktop {
     text-align: left;
-  }
+  } */
 }
 
 .our-features-title,
@@ -159,6 +160,10 @@
 
   @include tablet {
     text-align: center;
+  }
+
+  @include desktop {
+    text-align: left;
   }
 }
 
